色々直さないと行けない所が多数だが、クイズ編集処理周り 実装

--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -217,10 +217,10 @@
                       </label>
                       <div class="col-md-5 col-sm-8">
                         <div class="input-group">
-                          正解の画像<div class="input-file1"><input type="file" name="preview1_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
+                          正解の画像<div class="input-file1"><input type="file" name="correct_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
                           <div class="preview1" style="margin-top:10px;" /></div><br />
 
-                          不正解の画像<div class="input-file2"><input type="file" name="inpreview1_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
+                          不正解の画像<div class="input-file2"><input type="file" name="incorrect_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
                           <div class="preview2" style="margin-top:10px;" /></div>
                         </div>
                       </div>
