gameoverまでは実装。clearはまだ

--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -160,7 +160,7 @@
                     </ul>
                 </div>
                 <div class="next">
-                    <button type="button" class="btnStyle03 next04" value="">次の問題へ</button>
+                    <button type="button" class="btnStyle03 next04 nextQuestion" value="">次の画面へ</button>
                 </div>
             </div>
         </div>
