--- a/public/css/management/topquiz.css
+++ b/public/css/management/topquiz.css
@@ -48,12 +48,17 @@ h1 {
 }
 
 .search {
+  background-color: #FF8000;
+	color: #fff;
+  float: left;
+  position: absolute;
+  left: 120px;
+  top: 45px;
 }
 
 .link {
   float: right;
   margin-top: -60px;
-  margin-right: 30px;
 }
 .add {
   text-align: center;
