--- a/templates/management/area.html
+++ b/templates/management/area.html
@@ -38,7 +38,7 @@
 	<table class="table table-hover table-size">
 		<thead>
 			<tr>
-				<th class="num">番号</th>
+				<th class="num">エリアID</th>
 				<th class="name">エリア名</th>
 				<th class="rename">編集</th>
 				<th class="delete">削除</th>
