--- a/public/css/management/topquiz.css
+++ b/public/css/management/topquiz.css
@@ -4,7 +4,7 @@ h1 {
   margin-top: 40px;
   margin-bottom: 30px;
 }
-<!--- button --->
+<!-- button -->
 .button {
 	display: inline-block;
 	width: 200px;
