--- a/templates/management/topquestion.html
+++ b/templates/management/topquestion.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -332,12 +331,13 @@
 						<h4 class="modal-title" id="myModalLabel{{ item['beast_house_id'] }}">クイズ削除</h4>
 					</div>
 					<div class="modal-body">
-						<form method="post" action="/tobe_master/management/area/">
+						<form method="post" action="/tobe_master/management/quiz/delete/{{ question['question_id'] }}">
 							<p>削除してよろしいですか？</p>
 							<p>問題ID : {{ item['beast_house_id'] }}</p>
 							<p>エリア名 : {{ item['name'] }}</p>
+							<input type="hidden" name="_METHOD" value="DELETE"/>
 							<input type="hidden" class="form-control" name="question_id" id="question_id" value="{{ question['question_id'] }}">
-							<input type="submit" class="form-control btn btn-primary deletecheck" name="delete" value="削除">
+							<input type="submit" class="form-control btn btnprimary deletecheck" name="delete" value="削除">
 						</form>
 					</div>
 				</div>
