編集モーダルの編集ボタン位置修正

--- a/public/css/management/topquiz.css
+++ b/public/css/management/topquiz.css
@@ -117,6 +117,12 @@ margin-right: 5px;
   margin-top: 10px;
   margin-left: 290px;
 }
+.correction-check {
+  width: 100px;
+  margin-top: 10px;
+  float: right;
+  margin-right: 130px;
+}
 .search-button {
   width: 100px;
   margin-top: 10px;
