--- a/templates/management/topquestion.html
+++ b/templates/management/topquestion.html
@@ -315,7 +315,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-xs-offset-3 col-xs-10">
-									<input name="Submit" type="submit" value="編集" class="btn btn-primary">
+									<input name="Submit" type="submit" value="編集" class="btn btn-primary correction-check">
 								</div>
 							</div>
 						</form>
