Ａパターンのclearとgameoverまでは完成。

--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -178,16 +178,9 @@
                         <p class="correct">正解数：<span class="num">4</span></p>
                     </div>
                 </li>
-                <li>
-                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-                    <div class="text">
-                        <p class="playerName">カンガルー</p>
-                        <p class="correct">正解数：<span class="num">0</span></p>
-                    </div>
-                </li>
             </ul>
             <ul class="btnList03">
-                <li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
+                <li><button type="button" class="btnStyle04" value="" onclick="location.href='http://localhost/tobe_master/web/quiz/multiple'">再挑戦する</button></li>
                 <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
             </ul>
         </div>
@@ -204,30 +197,9 @@
                         <p class="correct">正解数：<span class="num">10</span></p>
                     </div>
                 </li>
-                <li>
-                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-                    <div class="text">
-                        <p class="playerName">カンガルー</p>
-                        <p class="correct">正解数：<span class="num">0</span></p>
-                    </div>
-                </li>
-                <li>
-                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-                    <div class="text">
-                        <p class="playerName">シロクマ</p>
-                        <p class="correct">正解数：<span class="num">4</span></p>
-                    </div>
-                </li>
-                <li>
-                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-                    <div class="text">
-                        <p class="playerName">カンガルー</p>
-                        <p class="correct">正解数：<span class="num">0</span></p>
-                    </div>
-                </li>
             </ul>
             <ul class="btnList03">
-                <li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
+                <li><button type="button" class="btnStyle04" value="" onclick="location.href='http://localhost/tobe_master/web/quiz/multiple'">もう１度遊ぶ</button></li>
                 <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
             </ul>
         </div>
