パスの変更

--- a/templates/management/area.html
+++ b/templates/management/area.html
@@ -21,9 +21,9 @@
 		<div class="col-md-12">
 			<h1 class="text-center"> エリア管理 </h1>
 			<div class="link">
-				<a href="http://localhost/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
-				<a href="http://localhost/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
-				<a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
+				<a href="/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
+				<a href="/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
+				<a href="/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
 			</div>
 		</div>
 
