--- a/templates/management/topquestion.html
+++ b/templates/management/topquestion.html
@@ -78,9 +78,9 @@
 				<a role="button" class="btn btn-link button search" data-toggle="modal" data-target="#search_modal">絞り込み検索</a>
 				<h1 class="text-center"> クイズ管理 </h1>
 				<div class="link">
-					<a href="http://localhost/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
-					<a href="http://localhost/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
-					<a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
+					<a href="/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
+					<a href="/tobe_master/management/quiz/make" role="button" class="btn btn-link button">クイズ作成へ</a>
+					<a href="/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
 				</div>
 			</div>
 
