--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -24,9 +24,9 @@
       <div class="col-md-12">
         <h1 class="text-center"> クイズ作成 </h1>
         <div class="link">
-          <a href="http://localhost/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
-          <a href="http://localhost/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
-          <a href="http://localhost/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
+          <a href="/tobe_master/management/area" role="button" class="btn btn-link button">エリア管理へ</a>
+          <a href="/tobe_master/management/quiz" role="button" class="btn btn-link button">クイズ管理へ</a>
+          <a href="/tobe_master/management/" role="button" class="btn btn-link button logout">ログアウト</a>
         </div>
       </div>
       <!-- class=col-md-12 -->
