--- a/public/css/web/common.scss
+++ b/public/css/web/common.scss
@@ -87,9 +87,11 @@ div[class^="game"] {
 		text-align: center;
 
 		img {
-			width: 70%;
+			width: auto;
+			height: 27vh;
 			margin: 0 auto;
 			box-shadow: 0 3px 5px 0 rgba(0,0,0,0.69);
+			object-fit: contain;
 		}
 	}
 }
@@ -207,10 +209,11 @@ button.selected {
 
 .answerArea {
 	padding-bottom: 2%;
+	letter-spacing: -.4em;
 	overflow: hidden;
 
 	& > li {
-		display: inline-block;
+		@include inlineBlock;
 		width: 48%;
 
 		& + li {
