クイズ削除が出来ないバグ && 削除のmodalウインド内の内容修正

--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -73,9 +73,9 @@
                       </label>
                       <div class="col-md-5 col-sm-8">
                         <div class="input-group">
-                          <div class="input-file_A"><input type="file" name="problem_image" id="problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" required></div>
+                          <div class="input-file_A_1"><input type="file" name="problem_image" id="problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" required></div>
                         </div>
-                        <div class="preview" style="margin-top:10px;" /></div>
+                        <div class="preview_A_1" style="margin-top:10px;" /><img src="" width="150px"></div>
                       </div>
                     </div>
                     <div class="form-group">
@@ -217,11 +217,11 @@
                       </label>
                       <div class="col-md-5 col-sm-8">
                         <div class="input-group">
-                          正解の画像<div class="input-file1"><input type="file" name="correct_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
-                          <div class="preview1" style="margin-top:10px;" /></div><br />
+                          正解の画像<div class="input-file_B_1"><input type="file" name="correct_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
+                          <div class="preview_B_1" style="margin-top:10px;" /></div><br />
 
-                          不正解の画像<div class="input-file2"><input type="file" name="incorrect_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
-                          <div class="preview2" style="margin-top:10px;" /></div>
+                          不正解の画像<div class="input-file_B_2"><input type="file" name="incorrect_image" id="file_nm" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
+                          <div class="preview_B_2" style="margin-top:10px;" /></div>
                         </div>
                       </div>
                     </div>
@@ -312,10 +312,10 @@
                       <label class="control-label col-sm-3">問題画像<span class="text-danger">*</span><br></label>
                       <div class="col-md-5 col-sm-8">
                         <div class="input-group">
-                          A<div class="input-fileA"><input type="file" name="first_problem_image" id="first_problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
-                          <div class="preview_A" style="margin-top:10px;" /></div>
-                          B<div class="input-fileB"><input type="file" name="second_problem_image" id="second_problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
-                          <div class="preview_B" style="margin-top:10px;" /></div>
+                          A<div class="input-file_C_1"><input type="file" name="first_problem_image" id="first_problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div><br />
+                          <div class="preview_C_1" style="margin-top:10px;" /></div>
+                          B<div class="input-file_C_2"><input type="file" name="second_problem_image" id="second_problem_image" class="form-control upload" placeholder="" aria-describedby="file_upload" style="margin-bottom: 10px;" required></div>
+                          <div class="preview_C_2" style="margin-top:10px;" /></div>
                         </div>
                       </div>
                     </div>
