b.cにも対応しました

--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -181,7 +181,7 @@
             </ul>
             <ul class="btnList03">
                 <li><button type="button" class="btnStyle04" value="" onclick="location.href='http://localhost/tobe_master/web/quiz/multiple'">再挑戦する</button></li>
-                <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
+                <li><button type="button" class="btnStyle05" value="" onclick="location.href='http://localhost/tobe_master/web/quiz'">TOPへ戻る</button></li>
             </ul>
         </div>
 
@@ -200,7 +200,7 @@
             </ul>
             <ul class="btnList03">
                 <li><button type="button" class="btnStyle04" value="" onclick="location.href='http://localhost/tobe_master/web/quiz/multiple'">もう１度遊ぶ</button></li>
-                <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
+                <li><button type="button" class="btnStyle05" value="" onclick="location.href='http://localhost/tobe_master/web/quiz'">TOPへ戻る</button></li>
             </ul>
         </div>
     </div>
