--- a/templates/web/quiz_top.html
+++ b/templates/web/quiz_top.html
@@ -5,54 +5,43 @@
     クイズ画面TOPのHTML
  -->
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_top.css">
-	<title>めざせ！とべマスター</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_top.css">
+    <title>めざせ！とべマスター</title>
 </head>
-<body>
-	<div class="contentIn">
-		<!-- トップページ -->
-		<div class="index">
-			<h1>めざせ！とべマスター</h1>
-			<ul class="btnList01">
-				<li><button type="button" class="btnStyle06 start" value="">はじめる</button></li>
-				<li><button type="button" class="btnStyle07 rule" value="">ルール説明</button></li>
-			</ul>
-		</div>
 
-		<!-- 人数選択画面 -->
-		<div class="playerDecide">
-			<ul class="playerList01">
-				<li>
-					<img src="/tobe_master/public/images/web/ico_penguin01.jpg" alt=""><span>ペンギン</span>
-				</li>
-				<li>
-					<img src="/tobe_master/public/images/web/ico_bear01.jpg" alt=""><span>シロクマ</span>
-				</li>
-				<li>
-					<img src="/tobe_master/public/images/web/ico_tiger01.jpg" alt=""><span>トラ</span>
-				</li>
-				<li>
-					<img src="/tobe_master/public/images/web/ico_rabbit01.jpg" alt=""><span>ウサギ</span>
-				</li>
-				<li>
-					<img src="/tobe_master/public/images/web/ico_fox01.jpg" alt=""><span>キツネ</span>
-				</li>
-				<li>
-					<img src="/tobe_master/public/images/web/ico_elephant01.jpg" alt=""><span>ゾウ</span>
-				</li>
-			</ul>
-			<ul class="btnList02">
-				<li><button type="button" class="btnStyle08 minus" value="">減らす</button></li>
-				<li><button type="button" class="btnStyle08 plus" value="">増やす</button></li>
-			</ul>
-			<div class="next">
-				<button type="button" class="btnStyle03" value="">ゲームを開始する</button>
-			</div>
-		</div>
-	</div>
+<body>
+    <div class="contentIn">
+        <!-- トップページ -->
+        <div class="index">
+            <h1>めざせ！とべマスター</h1>
+            <ul class="btnList01">
+                <li><button type="button" class="btnStyle06 start" value="">はじめる</button></li>
+                <li><button type="button" class="btnStyle07 rule" value="">ルール説明</button></li>
+            </ul>
+        </div>
+
+        <!-- 人数選択画面 -->
+        <div class="playerDecide">
+            <ul class="playerList01">
+                <li>
+                    <img src="/tobe_master/public/images/web/ico_penguin01.jpg" alt=""><span>ペンギン</span>
+                </li>
+            </ul>
+            <ul class="btnList02">
+                <li><button type="button" class="btnStyle08 minus" value="">減らす</button></li>
+                <li><button type="button" class="btnStyle08 plus" value="">増やす</button></li>
+            </ul>
+            <div class="next">
+                <button type="button" class="btnStyle03 gameStart" value="">ゲームを開始する</button>
+            </div>
+        </div>
+    </div>
+    <script src="/tobe_master/public/js/top_import.js" type="text/javascript" charset="utf-8"></script>
 </body>
+
 </html>
